build: adjusted open api spec, end to end test and api for the new post call. Started work on updating the dropDisc component to makeMove.
